tests/baselines/reference/exportDeclarationInInternalModule.errors.txt
exportDeclarationInInternalModule.ts(6,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
exportDeclarationInInternalModule.ts(10,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
exportDeclarationInInternalModule.ts(13,19): error TS1141: String literal expected.


==== exportDeclarationInInternalModule.ts (3 errors) ====
    class Bbb {
    }
    
    class Aaa extends Bbb { }
    
    module Aaa {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class SomeType { }
    }
    
    module Bbb {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class SomeType { }
    
        export * from Aaa;      // this line causes the nullref
                      ~~~
!!! error TS1141: String literal expected.
    }
    
    var a: Bbb.SomeType;
    